# cute_tmp_lib

./: CMakeLists.txt  README.md
include/variadic_utils/: type_bag.hpp  variadic_utils_core.hpp
tests/: CMakeLists.txt  type_bag_tests.cpp
